# honeygui-design

./: .eslintrc.json  .gitee-ci.yml  .gitignore  .gitmodules  .kiro  .kiro-better-show  .vscodeignore  AGENTS.md  ARCHITECTURE_ANALYSIS.md  BUGFIX_CLICK_DISAPPEAR.md  CACHE_MANAGEMENT.md  CANVAS_CONFIG_MIGRATION.md  CLAUDE.md  CODE_AUDIT_REPORT.md  CODE_REDUNDANCY_ANALYSIS.md  COMPONENT_NAMING_AUDIT.md  CORE_LOGIC_REFACTOR_SUMMARY.md  CSP_VIOLATION_FIX.md  DEVELOPMENT.md  DOCS_INDEX.md  ERROR_FIX_REPORT.md  EXECUTIVE_SUMMARY.md  FIXES.md  FIX_COMPLETED_REPORT.md  FIX_HG_VIEW_SIZE.md  FRONTEND_LOG_GUIDE.md  HML_GENERATION_FIX.md  HONEYGUI_COMPONENT_NAMING.md  HONEYGUI_C_CODEGEN_ARCHITECTURE.md  ID_CHANGE_FINAL_FIX.md  ID_CHANGE_FIX.md  ID_CHANGE_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTERACTION_EXAMPLE.md  LICENSE  LOG_BUG_FIX_REPORT.md  MIGRATION_COMPLETE.md  MODIFICATION_SUMMARY.md  OFFLINE_DEVELOPMENT_MODE.md  (+49 more)
lib/gui_vector_map/map/firmware/sim/: CMakeLists.txt  app.c
lib/gui_vector_map/map/firmware/src/trvg/: CMakeLists.txt  spec.md  trvg.c  trvg_mve.h
lvgl-pc/: .gitignore  CMakeLists.txt  README.md  lv_conf.h
lvgl-pc/lvgl-lib/include/lvgl/: lv_conf.h  lvgl.h
lvgl-pc/lvgl-lib/include/lvgl/src/: lv_conf_internal.h
lvgl-pc/lvgl-lib/include/lvgl/src/core/: lv_global.h  lv_group.h  lv_group_private.h  lv_obj.h  lv_obj_class.h  lv_obj_class_private.h  lv_obj_draw.h  lv_obj_event.h  lv_obj_event_private.h  lv_obj_pos.h  lv_obj_private.h  lv_obj_property.h  lv_obj_style.h  lv_obj_style_gen.h  lv_obj_style_private.h  lv_refr_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/display/: lv_display.h  lv_display_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/draw/: lv_draw.h  lv_draw_arc.h  lv_draw_buf.h  lv_draw_buf_private.h  lv_draw_image_private.h  lv_draw_label_private.h  lv_draw_line.h  lv_draw_mask_private.h  lv_draw_private.h  lv_draw_vector_private.h  lv_image_decoder_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/draw/convert/: lv_draw_buf_convert.h
lvgl-pc/lvgl-lib/include/lvgl/src/draw/dma2d/: lv_draw_dma2d_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/draw/eve/: lv_draw_eve_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/draw/nema_gfx/: lv_draw_nema_gfx.h  lv_draw_nema_gfx_utils.h
lvgl-pc/lvgl-lib/include/lvgl/src/draw/rtk/: font_rendering_utils.h  lv_draw_rtk.h
lvgl-pc/lvgl-lib/include/lvgl/src/draw/sw/: lv_draw_sw.h  lv_draw_sw_mask_private.h  lv_draw_sw_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/draw/vg_lite/: lv_draw_vg_lite.h  lv_draw_vg_lite_type.h  lv_vg_lite_grad.h  lv_vg_lite_path.h  lv_vg_lite_pending.h  lv_vg_lite_utils.h
lvgl-pc/lvgl-lib/include/lvgl/src/drivers/libinput/: lv_libinput_private.h  lv_xkb_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/drivers/nuttx/: lv_nuttx_profiler.h
lvgl-pc/lvgl-lib/include/lvgl/src/drivers/opengles/: lv_opengles_driver.h  lv_opengles_egl_private.h  lv_opengles_texture_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/drivers/sdl/: lv_sdl_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/drivers/uefi/: lv_uefi_context.h  lv_uefi_display.h  lv_uefi_indev.h  lv_uefi_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/drivers/wayland/: lv_wayland_private.h  lv_wayland_smm.h  lv_wl_window.h
lvgl-pc/lvgl-lib/include/lvgl/src/drivers/windows/: lv_windows_context.h  lv_windows_input_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/font/: lv_binfont_loader.h  lv_font_fmt_txt.h  lv_font_fmt_txt_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/indev/: lv_indev.h  lv_indev_gesture_private.h  lv_indev_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/layouts/: lv_layout.h  lv_layout_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/libs/avi/: avidec.h  lv_avi.h  lv_avi_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/libs/barcode/: lv_barcode_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/libs/expat/: expat.h  internal.h  nametab.h  siphash.h  xmlrole.h  xmltok.h  xmltok_impl.h
lvgl-pc/lvgl-lib/include/lvgl/src/libs/ffmpeg/: lv_ffmpeg.h  lv_ffmpeg_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/libs/freetype/: lv_freetype_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/libs/fsdrv/: lv_fsdrv.h
lvgl-pc/lvgl-lib/include/lvgl/src/libs/gif/: lv_gif.h
lvgl-pc/lvgl-lib/include/lvgl/src/libs/gstreamer/: lv_gstreamer.h  lv_gstreamer_internal.h
lvgl-pc/lvgl-lib/include/lvgl/src/libs/jpu/: lv_jpu.h
lvgl-pc/lvgl-lib/include/lvgl/src/libs/qrcode/: lv_qrcode_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/libs/rle/: lv_idu.h  lv_rle.h
lvgl-pc/lvgl-lib/include/lvgl/src/libs/rlottie/: lv_rlottie_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/libs/svg/: lv_svg.h
lvgl-pc/lvgl-lib/include/lvgl/src/libs/thorvg/: tvgSwRasterTexmap.h
lvgl-pc/lvgl-lib/include/lvgl/src/misc/: lv_anim.h  lv_anim_private.h  lv_anim_timeline_private.h  lv_array.h  lv_bidi_private.h  lv_event.h  lv_event_private.h  lv_fs.h  lv_fs_private.h  lv_matrix.h  lv_profiler_builtin_private.h  lv_rb.h  lv_rb_private.h  lv_style.h  lv_style_gen.h  lv_text_private.h  lv_timer.h  lv_timer_private.h  lv_types.h
lvgl-pc/lvgl-lib/include/lvgl/src/misc/cache/: lv_cache_entry_private.h  lv_cache_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/osal/: lv_os_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/others/file_explorer/: lv_file_explorer.h  lv_file_explorer_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/others/font_manager/: lv_font_manager.h  lv_font_manager_recycle.h
lvgl-pc/lvgl-lib/include/lvgl/src/others/fragment/: lv_fragment_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/others/gridnav/: lv_gridnav.h
lvgl-pc/lvgl-lib/include/lvgl/src/others/ime/: lv_ime_pinyin.h  lv_ime_pinyin_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/others/imgfont/: lv_imgfont.h
lvgl-pc/lvgl-lib/include/lvgl/src/themes/: lv_theme_private.h
lvgl-pc/lvgl-lib/include/lvgl/src/tick/: lv_tick_private.h
lvgl-pc/lvgl-lib/lib/: rustglb.dll.lib
lvgl-pc/lvgl-lib/share/pkgconfig/: lvgl.pc
lvgl-pc/scripts/: build-lvgl-lib.cmd  build-lvgl-lib.ps1
lvgl-pc/src/: fb_sdl.c  lv_gltf_override.c  lv_gltf_override.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h  main.c
(+907 files in other folders)
